<resources>
    <string name="app_name">Activism-App</string>
    <string name="title_activity_blmtabs">BLMTabs</string>
    <string name="tab_text_1">History</string>
    <string name="tab_text_2">Resources</string>
    <string name="tab_text_3">Extra</string>

    <string name="hello_blank_fragment1">Black Lives Matter 1</string>
    <string name="hello_blank_fragment2">Black Lives Matter 2</string>
    <string name="hello_blank_fragment3">Black Lives Matter 3</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="history_section_1">Origins</string>
    <string name="history_section_2">Present Day</string>
    <string name="history_section_3">Timeline</string>
    <string name="history_section_5">Work Cited</string>

    <string name="resources_section_1">Action Items</string>
    <string name="resources_section_2">Donations</string>
    <string name="resources_section_3">Petitions</string>
    <string name="resources_section_4">Protests</string>
    <string name="resources_section_5">Voting</string>

    <string name="extra_section_1">Additional Information</string>
    <string name="extra_section_2"> Soliciting Contributions</string>
    <string name="contributions">We want you to feel like you are an active participant in these movements, so we are giving you a chance to give your input. If you have any information you would like to add to any of these sections please contact us. Anything from an important article to an organization you may have started in your local community can be useful. Please feel free to share any thoughts and feedback on the app in general as well. If it is approved it will show up in the additional information section of the specific movement and you will be given credit for the contribution. </string>

</resources>
