<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MeToo">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF8880"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/MeTab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/MeTab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/MeTab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_3" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagermetoo"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>