<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GlobalWarming">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80FF84"
        >
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_1"
            android:id="@+id/globalTab1"
            >
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_2"
            android:id="@+id/globalTab2"
            >
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_3"
            android:id="@+id/globalTab3"
            >
        </com.google.android.material.tabs.TabItem>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagerglobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>
