<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF280"
    tools:context=".pridetab2">

    <LinearLayout
        android:id="@+id/Pride_Resources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Action_Items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resources_section_1"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:text="Explain what all there is to do and how it can make a difference and then below have the specific sections" />

        <TextView
            android:id="@+id/Donations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resources_section_2"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:text="So many organizations are tyring to make a change they jist need your help and support to keep doing the amazing things that they are doing and then we can list specific ones that we would reccomend donating too " />

        <TextView
            android:id="@+id/Petitons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:text="@string/resources_section_3"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="155dp"
            android:layout_marginRight="155dp"
            android:textColor="#000000"
            android:text="Here are two websites full of many petitions to push forward change for the lgbtq+ community. It will only take a few clicks to help make a big difference in many people’s lives. Please help push forward the change!" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="155dp"
            android:layout_marginRight="155dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="https://www.thepetitionsite.com/lgbtq-rights/#hottest" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="155dp"
            android:layout_marginRight="155dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="https://www.change.org/t/lgbt-rights-3" />

        <TextView
            android:id="@+id/Protests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resources_section_4"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:text="since we cant name all protests happening in each place we should just talk about how they are important and we should show support by showing up to them and then maybe we can have a way for users to specifically inform people in their areas about protests " />

        <TextView
            android:id="@+id/Voting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resources_section_5"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:text="In this section we can maybe be more specific about what bills to vote for at a national level and tell people to email local representatives anf stuff and tell them to look into this stuff on their own " />
    </LinearLayout>
</ScrollView>