<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8880"
    tools:context=".metab1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/MeHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Origins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_section_1"
            android:textColor="#000000"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="      The Me Too movement started in 2006 by Tarana Burke to help spread awareness and help victims of sexual harassment, focusing on women and women of color. Their goal was to put several survivors on the frontlines and have them drive the solutions that would help decrease the cases of sexual harassment and bring global awareness to these issues. "
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:src="@drawable/metoo1" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="180dp"
                    android:layout_height="89dp"
                    android:src="@drawable/metoo2" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="       Actresses like Alyssa Milano began to expand the movement once it started, believing that they wanted people to understand the magnitude of women getting sexually harassed. As the Me Too movement gained more attention, it led several states to prohibit the use of nondisclosure agreements in sexual harassment cases. With more recognition, a group of women in Hollywood started a charity and have raised over 24 million dollars since 2018, this has led over 3,900 women to get legal support for their cases."
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/metoo3" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="382dp"
                android:layout_height="127dp"
                android:layout_weight="1"
                android:src="@drawable/metoo4" />
        </LinearLayout>

        <TextView
            android:id="@+id/Present_Day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_section_2"
            android:textSize="40sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="At one point, majority of the sexual harassment cases have occurred at a young age, 54% of people’s average ages are between 18-34. 90% of rape cases are female, and 82% of general sexual harassment cases are women as well. Women of color are three times more likely to be sexually harassed in their workspace compared to their white colleagues. "
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/Timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_section_3"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:text="Bullet points or images for the timeline here" />

        <TextView
            android:id="@+id/More_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_section_4"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:text="Add extra links here" />

        <TextView
            android:id="@+id/Work_Cited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_section_5"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="Provide citations here" />
    </LinearLayout>
</ScrollView>